Fix bug with hazelcast and java9+